- Modified elp upload to update
- Modified sendelpfile for individual uploads to be converted to courses and publishers auto assigned
- Bug fixes
- /auth/ will redirect to login if it isn't a POST request
- set up invitation api and checking invitation views.
- Removed sendtestlogs
- Email sent logic finished. Updated git push login for EMAIL settings in settings.py

v0.8.7
- Organisation create for super admins creates default teacher and school. It also assigns it to the organsiation and sets admin password to default teacher.
- 

v0.8.6
- New report usage in development
- Updated usage report according to data migration from adl to umcdj
- Reduced to two reports one for all statements in organisation, one for usage (user vs time) report
- Fixed activity type to title in usage report, added labels to usage_report, show activity id in usage_report as well.
- Added last activity done by user.

v0.8.5
- Fixed bug in deleting organisation makes organisation users suspended with no organisations. changed code to mark deleted organisatin's users as inactive. 
- Added super user view of user table: Now a the superuser/staff of the project can see all users in the database. 
- Code clean up (print statements)

v0.8.4
- Updated production server and migrated to postgres.
- Tested prod server okay.
- Fixed small report bug.

v0.8.3
- Small update to development deployment script to auto install without prompting for a particular dependency.
- Updated ReadMe

v0.8.2
- Updated jenkins test script to ignore a few applications in testing for now.
- Updated build development script to account for installing postgres, creating users. 
- Added simplejson and other dependencvies (postgres related)
- Removed import from django-util simplejson because Django 1.5 removed support for in built simplejson (https://docs.djangoproject.com/en/dev/releases/1.5/)
- Updated build script to install simplejson

v0.8.1