@@ -48,7 +48,7 @@
 {% endblock %}
 {% if state == "Valid code" %}
  {% if invitationemail %}
-   <p style="color:green"><i>Hi {{invitationemail}} , please fill in the form below to continue to {{invitationblock.name}} course</i></p>
+   <p style="color:green"><i>Hi {{invitationemail}} , please fill in the form below to continue to {{invitationcourse.name}} course</i></p>
  {% else %}
    <p style="color:green;"><i>Code: {{organisationalcode}} ({{organisation_name}})</i></p>
  {% endif %}
@@ -109,7 +109,7 @@
     </div>
     {% if invitationemail %}
      <div data-role="fieldcontain" style="padding-bottom:5px">
-      <input type="text" placeholder="Block Id" style="height: 30px; width: 250px;" id="blockid" name="blockid" value="{{invitationblock.id}}" hidden/>
+      <input type="text" placeholder="Block Id" style="height: 30px; width: 250px;" id="courseid" name="courseid" value="{{invitationcourse.id}}" hidden/>
      </div>
 
      <div data-role="fieldcontain" style="padding-bottom:5px">
