@@ -19,6 +19,7 @@ v0.9.0
 - set up invitation api and checking invitation views.
 - Removed sendtestlogs
 - Email sent logic finished. Updated git push login for EMAIL settings in settings.py
+- Updated assigned_courses to print out assigned courses for courses outside a user's organisation if he/she is individual organisation. We use this for invitation based assignments.
 
 v0.8.7
 - Organisation create for super admins creates default teacher and school. It also assigns it to the organsiation and sets admin password to default teacher.
